@@ -1,3 +1,8 @@
+2020-11-12  Timm Bäder <tbaeder@redhat.com>
+
+	* dwfl_segment_report_module.c (dwfl_segment_report_module): Declare
+	p32 and p64 as pointers instead of arrays.
+
 2020-09-18  Mark Wielaard  <mark@klomp.org>
 
 	* zstd.c: New file.
